# Rosetta

./: .coverage  .gitattributes  .gitignore  Dockerfile  INDEX.md  README.md  check_magic.py  conftest.py  db.sqlite3  env  init_project.py  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  squirrel.toml  start.sh  temp_home.html
.github/workflows/: build.yml
Rosetta/: asgi.py  celery.py  settings.py  sitemaps.py  unfold_settings.py  urls.py  wsgi.py
administration/: forms.py  urls.py  views.py
administration/tests/: test_urls.py  test_views.py
apps/administration/: README.md  apps.py  forms.py  generics.py  mixins.py  urls.py  views.py
apps/blog/: apps.py  feeds.py  forms.py  models.py  schemas.py  services.py  translation.py  urls.py  views.py  views_extra.py
apps/core/: admin.py  context_processors.py  logging.py  middleware.py  models.py  services.py  sitemaps.py  tasks.py  translation.py  urls.py  utils.py  validators.py  views.py
apps/guestbook/: forms.py  models.py  tests.py  urls.py  views.py
apps/users/: apps.py  forms.py  models.py  translation.py  urls.py  views.py
apps/voting/: apps.py  models.py  tests.py  translation.py  urls.py  views.py
backups/: backup_20260204_012227.json
blog/: admin.py  apps.py  feeds.py  forms.py  models.py  schemas.py  services.py  signals.py  sitemaps.py  urls.py  views.py  wagtail_hooks.py
blog/migrations/: 0001_initial.py  0002_delete_subscriber_remove_post_notification_sent.py  0002_initial.py  0002_remove_category_posts.py  0003_alter_category_options_alter_comment_options_and_more.py  0004_post_password.py  0005_alter_comment_active_alter_comment_created_at.py  0006_alter_post_created_at_alter_post_status.py  0007_postviewhistory.py  0008_comment_parent.py  0009_subscriber.py  0010_post_notification_sent.py  0011_tag_color.py  0012_tag_is_active.py
blog/templatetags/: blog_extras.py  capture_tags.py  markdown_extras.py
blog/tests/: test_models_slug.py  test_signals.py  test_views.py
core/: apps.py  backends.py  context_processors.py  logging.py  middleware.py  models.py  services.py  sitemaps.py  urls.py  utils.py  validators.py  views.py
core/migrations/: 0001_initial.py  0002_alter_navigation_options_alter_sitesettings_options_and_more.py  0003_sitesettings_about_content_and_more.py  0004_notification.py  0005_page.py  0006_remove_sitesettings_about_content_and_more.py  0007_friendlink.py  0008_alter_friendlink_logo.py  0009_delete_sitesettings.py  0010_navigation_is_active.py  0011_navigation_location.py
core/templatetags/: core_extras.py
core/tests/: conftest.py  schemas.py  test_admin_debug.py  test_backends.py  test_commands.py  test_core.py  test_error_pages.py  test_models_and_views.py  test_models_extended.py  test_services.py  test_templates.py  test_ui_context.py  test_utils.py  urls.py
home/: admin.py  apps.py  models.py  urls.py  views.py
navigation/: __init__.py  admin.py  apps.py  context_processors.py  models.py
rosetta_audit/: project.db-shm  project.db-wal
scripts/: translate_po.py
static/css/: custom.css
templates/: 400.html  403.html  403_csrf.html  404.html  429.html  500.html  502.html  base.html  maintenance.html  rosetta_intro.html  styleguide.html
users/: forms.py  models.py  urls.py  views.py
videolist/: admin.py  apps.py  models.py  resources.py  tests.py  urls.py  views.py
(+351 files in other folders)
