[project]
name = "Rosetta"
version = "0.1.0"
description = "CMS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2",
    "django-debug-toolbar>=5.2.0",
    "django-import-export>=4.3.7",
    "django-redis>=5.4.0",
    "django-redisboard>=8.4.0",
    "django-rosetta>=0.10.2",
    "django-taggit>=6.1.0",
    "django-tailwind[reload]>=4.0.1",
    "django-unfold>=0.55.3",
    "markdown>=3.8",
    "openpyxl>=3.1.5",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.0",
    "redis>=6.0.0",
    "uvicorn>=0.34.2",
]
