[project]
name = "rosetta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.12.0",
    "django>=6.0",
    "django-chartjs>=2.3.0",
    "django-comments-xtd>=2.10.11",
    "django-compressor>=4.6.0",
    "django-constance[database]>=4.3.4",
    "django-contrib-comments>=2.2.0",
    "django-filter>=25.2",
    "django-guardian>=3.2.0",
    "django-htmx>=1.27.0",
    "django-imagekit>=6.0.0",
    "django-import-export>=4.3.14",
    "django-meta>=2.5.0",
    "django-simple-captcha>=0.6.3",
    "django-simple-history>=3.11.0",
    "django-tailwind[cookiecutter,honcho,reload]>=4.4.2",
    "django-watson>=1.6.3",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "faker>=40.1.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "loguru>=0.7.3",
    "markdown>=3.10",
    "model-bakery>=1.21.0",
    "pendulum>=3.1.0",
    "pillow>=12.1.0",
    "psutil>=7.2.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "manage.py",
    "Rosetta/asgi.py",
    "Rosetta/wsgi.py",
    "*/tests/*",
    "*/tests.py",
]
